<resources>
    <string name="app_name">IAT</string>
    <string name="app_version">v3.0</string>

    <string name="main_short">어서오세요!</string>
    <string name="main_long">암묵적 연합검사(IAT) 연구에 참여해주셔서 감사드립니다!</string>
    <string name="main_gift">참여가 끝나면 스타벅스(아메리카노) 기프티콘이 제공됩니다</string>
    <string name="main_no_gift">기프티콘 보상이벤트가 종료되었습니다\n보상 없이 참여하실 분들만 아래 약관 읽기를 눌러주세요</string>
    <string name="main_button">약관 읽기</string>

    <string name="agree_title">IRB 연구안내 및 동의서</string>
    <string name="agree_button">동의함</string>
    <string name="agree_subtitle">연구 참여 동의서</string>

    <string name="login_phone_1">전화번호를 입력해주세요</string>
    <string name="login_phone_2">전화번호는 개인을 구별하기 위한 정보이니\n정확하게 입력해주세요.\n보상 지급 외의 용도로 절대 사용되지 않습니다.</string>
    <string name="login_phone_3">* 같은 전화번호로 여러 명이 참여할 수 없습니다 *</string>
    <string name="login_phone_hint">\'-\'를 제외한 개인 전화번호</string>
    <string name="login_info_1">처음 오신 참여자님\n정보를 입력해주세요</string>
    <string name="login_info_2">개인 정보는 연구용 자료 수집 외의 용도로\n절대 사용되지 않습니다.</string>
    <string name="login_info_age">나이</string>
    <string name="login_info_man">남</string>
    <string name="login_info_woman">여</string>
    <string name="login_button">테스트 시작하기</string>

    <string name="check_1">설문 시작 전\n한 가지만 대답해주세요!</string>
    <string name="check_2">요즘 당신이 중요하게 생각하여 진행 중이신 공부가 있습니까?</string>
    <string name="check_3">현재 진지하게 임하는 공부가 없으면 설문에 참여하시기가 어렵습니다. 솔직하게 답변해주시기 바랍니다.</string>
    <string name="check_yes">있다</string>
    <string name="check_no">없다</string>

    <string name="survey_1">설문 전 주의사항</string>
    <string name="survey_2">설문은 약 20분 정도 소요되며 가로 화면으로 진행됩니다.\n모든 문항에 빠짐없이 답변해 주셔야 보상이 지급되오니</string>
    <string name="survey_3">매 단계마다 제시해 드리는 주의사항과 안내문을\n꼼꼼하게 읽어주시길 바랍니다.</string>
    <string name="survey_button">설문 시작하기</string>
    <string name="survey_question">문항</string>
    <string name="survey_prev">이전문항</string>
    <string name="survey_next">다음문항</string>
    <string name="survey_sub_question">(%d)  %s</string>

    <string name="iat">Implicit Association Test</string>
    <string name="iat_precautions">지금부터 5분 동안, 보여드리는 단어들을 구분하는 일을 할 것입니다.\n\n\'왼쪽 버튼\'과 \'오른쪽 버튼\'을 사용하여 가급적 빠르고 정확하게 누르시면 됩니다.\n\n아래에 제시된 범주에 속한 단어들을 확인하시고, 각 범주에 속한 단어들이 무엇이 있는지 한 번 훑어보시기 바랍니다.</string>
    <string name="iat_table_title_1">범주</string>
    <string name="iat_table_title_2">단어</string>
    <string name="iat_start">시작하기</string>
    <string name="iat_start_button">테스트 시작</string>
    <string name="iat_info">%s 단어가 나오면 왼쪽 버튼을, %s 단어가 나오면 오른쪽 버튼을 눌러주세요.\n가급적 빠르고 정확하게 실시해 주시면 됩니다.\n\n틀리면 ×자가 화면에 뜰 것입니다.\n그럴 때는 다시 정답을 눌러주시면 됩니다.\n정답을 맞히시면 곧바로 다음 문제로 넘어가게 됩니다.\n\n시작할 준비가 되셨으면 테스트 시작 버튼을 눌러주세요</string>

    <string name="iat_finish">테스트 완료!\n설문을 계속 진행해주세요</string>
    <string name="iat_finish_button">설문 진행하기</string>
    <string name="iat_left">왼쪽</string>
    <string name="iat_right">오른쪽</string>

    <string name="desc_logo">로고</string>
    <string name="desc_checkbox">체크 박스</string>
    <string name="desc_close">닫기</string>

    <string name="msg_server_error">서버의 일시적 장애로 이용이 불가합니다.</string>
    <string name="msg_network_error">네트워크 연결을 확인해주세요.</string>
    <string name="msg_data_error">데이터 처리 중 문제가 발생했습니다. 다시 시도해 주십시오.</string>
    <string name="msg_phone_notice">전화번호를 정확히 입력해주세요.</string>
    <string name="msg_info_notice">모든 항목을 입력해주세요</string>
    <string name="msg_major_notice">대학생은 전공을 입력해주세요</string>

</resources>