<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".ui.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_version"
        android:textColor="@color/txt_blue_gray"
        android:textSize="13sp"
        android:layout_gravity="end"
        android:layout_margin="3dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingHorizontal="20dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/desc_logo"
            android:layout_marginBottom="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_main_short"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_chainStyle="packed"/>

        <TextView
            android:id="@+id/tv_main_short"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_short"
            android:textColor="@color/txt_blue_gray"
            android:textSize="30sp"
            android:layout_marginBottom="20dp"
            app:layout_constraintTop_toBottomOf="@id/iv_logo"
            app:layout_constraintBottom_toTopOf="@id/tv_main_long"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_main_long"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_long"
            android:textColor="@color/txt_blue_gray"
            android:textSize="22sp"
            android:layout_marginBottom="20dp"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/tv_main_short"
            app:layout_constraintBottom_toTopOf="@id/tv_main_gift"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_main_gift"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_gift"
            android:textColor="@color/txt_blue_gray"
            android:textSize="15sp"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/tv_main_long"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary"
        android:textSize="28sp"
        android:text="@string/main_button"
        android:paddingVertical="15dp"
        android:layout_margin="20dp"/>

    <ProgressBar
        android:id="@+id/pb_main"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:visibility="gone"/>

</androidx.appcompat.widget.LinearLayoutCompat>