<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="45dp"
        android:layout_gravity="center"
        android:src="@drawable/logo"
        android:contentDescription="@string/desc_logo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight ="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#222"
            android:textSize="22sp"
            android:text="@string/login_info_1"
            android:gravity="center"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#777"
            android:textSize="15sp"
            android:text=""
            android:gravity="center"
            android:layout_marginBottom="50dp"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#555"
            android:backgroundTint="#3A3C5F"
            android:textCursorDrawable="@color/scroll_thumb"
            android:inputType="number"
            android:hint="@string/login_info_age"
            android:layout_marginHorizontal="25dp"
            android:layout_marginBottom="10dp"
            android:singleLine="true"
            android:lines="1"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginHorizontal="25dp"
            android:layout_marginBottom="10dp">

            <Button
                android:id="@+id/btn_man"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/radio_selected"
                android:textSize="18sp"
                android:text="@string/login_info_man"
                android:layout_marginEnd="5dp"/>
            <Button
                android:id="@+id/btn_woman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/radio_unselected"
                android:textSize="18sp"
                android:text="@string/login_info_woman"
                android:layout_marginStart="5dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="#D8D8D8"
            android:layout_marginHorizontal="25dp"
            android:layout_marginBottom="10dp"
            android:padding="7dp">

            <Spinner
                android:id="@+id/spn_grade"
                android:entries="@array/grade_array"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#FFF"
                android:layout_marginEnd="5dp"/>
            <Spinner
                android:id="@+id/spn_year"
                android:entries="@array/middle_array"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="#FFF"
                android:layout_marginStart="5dp"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_major"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="#D8D8D8"
            android:layout_marginHorizontal="25dp"
            android:layout_marginBottom="10dp"
            android:padding="7dp"
            android:visibility="gone">

            <Spinner
                android:id="@+id/spn_major"
                android:entries="@array/major_array"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"
                android:background="#FFF"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary"
        android:textColor="#FFF"
        android:textSize="28sp"
        android:text="@string/login_button"
        android:paddingVertical="15dp"
        android:layout_margin="20dp"/>

    <ProgressBar
        android:id="@+id/pb_info"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:visibility="gone"/>

</LinearLayout>