<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ll_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/secondary"
        android:elevation="10dp"
        android:padding="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:id="@+id/tv_left_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFF"
            android:textSize="22sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:id="@+id/tv_right_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFF"
            android:textSize="22sp"
            android:layout_gravity="end"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_iat"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/ll_title"
        app:layout_constraintBottom_toTopOf="@id/btn_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tv_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#222"
            android:textSize="30sp"
            tools:text="테스트"
            android:gravity="center"/>

        <ImageView
            android:id="@+id/iv_fail"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_close"
            android:contentDescription="@string/desc_close"
            android:visibility="gone"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/btn_left"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/primary"
        android:textColor="#FFF"
        android:textSize="30sp"
        android:text="@string/iat_left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.2"
        app:layout_constraintHeight_percent="0.2"/>

    <Button
        android:id="@+id/btn_right"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/primary"
        android:textColor="#FFF"
        android:textSize="30sp"
        android:text="@string/iat_right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.2"
        app:layout_constraintHeight_percent="0.2"/>

</androidx.constraintlayout.widget.ConstraintLayout>